--- a/PageObjectExtended/test-output/index.html
+++ b/PageObjectExtended/test-output/index.html
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-skipped">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,31 +91,31 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,  3 skipped,  </span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title skipped">Skipped methods</span>
-                    <span class="show-or-hide-methods skipped">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods skipped suite-Suite"> (hide)</a> <!-- hide-methods skipped suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods skipped suite-Suite"> (show)</a> <!-- show-methods skipped suite-Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
-                    <div class="method-list-content skipped suite-Suite">
+                    <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img width="3%" src="skipped.png"/>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.LoginTest" hash-for-method="loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})">loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="skipped.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.LoginTest" hash-for-method="loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})">loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.LoginTest" hash-for-method="loginTest({browser=firefox, password=vfgg, Runmode=Y, username=ddd@gmail.com})">loginTest({browser=firefox, password=vfgg, Runmode=Y, username=ddd@gmail.com})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="skipped.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.LoginTest" hash-for-method="loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})">loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.pol.zoho.testcases.LoginTest" hash-for-method="loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})">loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content skipped suite-Suite -->
+                    </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -127,9 +127,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-skipped">
+          <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.pol.zoho.testcases.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -139,17 +139,14 @@
                   </a> <!-- loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com}) -->
                   <span class="method-name">loginTest</span>
                   <span class="parameters">({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})</span>
-                  <div class="stack-trace">org.testng.SkipException: Skipping the test : LoginTest as the Runmode of Test Suite : master is NO
-	at com.pol.zoho.utilities.DataUtil.checkExecution(DataUtil.java)
-	at com.pol.zoho.testcases.LoginTest.loginTest(LoginTest.java)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
-	at java.lang.Thread.run(Thread.java:745)
-... Removed 9 stack frames
-</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginTest({browser=firefox, password=vfgg, Runmode=Y, username=ddd@gmail.com})">
+                  </a> <!-- loginTest({browser=firefox, password=vfgg, Runmode=Y, username=ddd@gmail.com}) -->
+                  <span class="method-name">loginTest</span>
+                  <span class="parameters">({browser=firefox, password=vfgg, Runmode=Y, username=ddd@gmail.com})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -158,40 +155,10 @@
                   </a> <!-- loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com}) -->
                   <span class="method-name">loginTest</span>
                   <span class="parameters">({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})</span>
-                  <div class="stack-trace">org.testng.SkipException: Skipping the test : LoginTest as the Runmode of Test Suite : master is NO
-	at com.pol.zoho.utilities.DataUtil.checkExecution(DataUtil.java)
-	at com.pol.zoho.testcases.LoginTest.loginTest(LoginTest.java)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
-	at java.lang.Thread.run(Thread.java:745)
-... Removed 9 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})">
-                  </a> <!-- loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com}) -->
-                  <span class="method-name">loginTest</span>
-                  <span class="parameters">({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})</span>
-                  <div class="stack-trace">org.testng.SkipException: Skipping the test : LoginTest as the Runmode of Test Suite : master is NO
-	at com.pol.zoho.utilities.DataUtil.checkExecution(DataUtil.java)
-	at com.pol.zoho.testcases.LoginTest.loginTest(LoginTest.java)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:511)
-	at java.util.concurrent.FutureTask.run(FutureTask.java:266)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
-	at java.lang.Thread.run(Thread.java:745)
-... Removed 9 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-skipped -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -248,20 +215,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'com.pol.zoho.testcases.LoginTest')
-data.setCell(0, 3, 156);
+data.setCell(0, 3, 41175);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginTest')
 data.setCell(1, 2, 'com.pol.zoho.testcases.LoginTest')
-data.setCell(1, 3, 140);
+data.setCell(1, 3, 34474);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'loginTest')
 data.setCell(2, 2, 'com.pol.zoho.testcases.LoginTest')
-data.setCell(2, 3, 125);
+data.setCell(2, 3, 34065);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 421 ms</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -289,16 +256,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.pol.zoho.testcases.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">loginTest({browser=firefox, password=vfgg, Runmode=N, username=ddd@gmail.com})</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">loginTest({browser=chrome, password=sddd, Runmode=Y, username=a@gmail.com})</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})</span>
+                <span class="method-name">loginTest({browser=firefox, password=vfgg, Runmode=Y, username=ddd@gmail.com})</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">loginTest({browser=chrome, password=dee, Runmode=Y, username=SS@gmail.com})</span>
+                <span class="method-start">1 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
