--- a/CucumberBDDParallel/test-output/index.html
+++ b/CucumberBDDParallel/test-output/index.html
@@ -102,22 +102,22 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.Jena.cucumber.prallel.google.runners.SearchOutlineFeature" hash-for-method="runScenario(&quot;Search Google from scenario outline&quot;, &quot;Searching on google using Scenario Outline&quot;)">runScenario("Search Google from scenario outline", "Searching on google using Scenario Outline")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.Jena.cucumber.prallel.google.runners.SearchManyFeature" hash-for-method="runScenario(&quot;Direct search on google firefox&quot;, &quot;Searching on google&quot;)">runScenario("Direct search on google firefox", "Searching on google")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.Jena.cucumber.prallel.google.runners.SearchManyFeature" hash-for-method="runScenario(&quot;Direct search on google chrome&quot;, &quot;Searching on google&quot;)">runScenario("Direct search on google chrome", "Searching on google")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.Jena.cucumber.prallel.google.runners.SearchOutlineFeature" hash-for-method="runScenario(&quot;Search Google from scenario outline&quot;, &quot;Searching on google using Scenario Outline&quot;)">runScenario("Search Google from scenario outline", "Searching on google using Scenario Outline")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.Jena.cucumber.prallel.google.runners.SearchOutlineFeature" hash-for-method="runScenario(&quot;Search Google from scenario outline&quot;, &quot;Searching on google using Scenario Outline&quot;)">runScenario("Search Google from scenario outline", "Searching on google using Scenario Outline")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.Jena.cucumber.prallel.google.runners.SearchManyFeature" hash-for-method="runScenario(&quot;Direct search on google firefox&quot;, &quot;Searching on google&quot;)">runScenario("Direct search on google firefox", "Searching on google")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -140,20 +140,20 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Direct search on google firefox&quot;, &quot;Searching on google&quot;)">
-                  </a> <!-- runScenario("Direct search on google firefox", "Searching on google") -->
+                  <a name="runScenario(&quot;Direct search on google chrome&quot;, &quot;Searching on google&quot;)">
+                  </a> <!-- runScenario("Direct search on google chrome", "Searching on google") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Direct search on google firefox", "Searching on google")</span>
+                  <span class="parameters">("Direct search on google chrome", "Searching on google")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Direct search on google chrome&quot;, &quot;Searching on google&quot;)">
-                  </a> <!-- runScenario("Direct search on google chrome", "Searching on google") -->
+                  <a name="runScenario(&quot;Direct search on google firefox&quot;, &quot;Searching on google&quot;)">
+                  </a> <!-- runScenario("Direct search on google firefox", "Searching on google") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Direct search on google chrome", "Searching on google")</span>
+                  <span class="parameters">("Direct search on google firefox", "Searching on google")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -253,24 +253,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.Jena.cucumber.prallel.google.runners.SearchManyFeature')
-data.setCell(0, 3, 38381);
+data.setCell(0, 3, 15845);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'com.Jena.cucumber.prallel.google.runners.SearchOutlineFeature')
-data.setCell(1, 3, 26264);
+data.setCell(1, 3, 14858);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'com.Jena.cucumber.prallel.google.runners.SearchOutlineFeature')
-data.setCell(2, 3, 17041);
+data.setCell(2, 3, 13987);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'runScenario')
 data.setCell(3, 2, 'com.Jena.cucumber.prallel.google.runners.SearchManyFeature')
-data.setCell(3, 3, 14474);
+data.setCell(3, 3, 13109);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 57 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -313,39 +313,39 @@ return data;
               <div class="chronological-class-name">com.Jena.cucumber.prallel.google.runners.SearchManyFeature</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">runScenario("Direct search on google firefox", "Searching on google")</span>
-                <span class="method-start">205 ms</span>
+                <span class="method-start">194 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.Jena.cucumber.prallel.google.runners.SearchOutlineFeature</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">runScenario("Search Google from scenario outline", "Searching on google using Scenario Outline")</span>
-                <span class="method-start">205 ms</span>
+                <span class="method-start">194 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Search Google from scenario outline", "Searching on google using Scenario Outline")</span>
-                <span class="method-start">26479 ms</span>
+                <span class="method-start">14184 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.Jena.cucumber.prallel.google.runners.SearchManyFeature</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">runScenario("Direct search on google chrome", "Searching on google")</span>
-                <span class="method-start">38591 ms</span>
+                <span class="method-start">16040 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.Jena.cucumber.prallel.google.runners.SearchOutlineFeature</div> <!-- chronological-class-name -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">43522 ms</span>
+                <span class="method-start">29043 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.Jena.cucumber.prallel.google.runners.SearchManyFeature</div> <!-- chronological-class-name -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">53070 ms</span>
+                <span class="method-start">29151 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
